syntax = "proto3";

package synapse;

import "api/node.proto";

enum StatusCode {
  kOk = 0;
  kUndefinedError = 1;
  kInvalidConfiguration = 2;
  kFailedPrecondition = 3;
  kUnimplemented = 4;
  kInternalError = 5;
  kPermissionDenied = 6;
  kQueryFailed = 7;
}

enum DeviceState {
  kUnknown = 0;
  kInitializing = 1;
  kStopped = 2;
  kRunning = 3;
  kError = 4;
}

message DeviceStorage {
  float total_gb = 1;
  float used_gb = 2;
}

message DevicePower {
  float battery_level_percent = 1;
  bool is_charging = 2;
}

message SignalChainStatus {
  repeated NodeStatus nodes = 1;
}

message Status {
  string message = 1;
  StatusCode code = 2;
  DeviceState state = 3;
  // repeated NodeSocket sockets = 4;
  reserved 4;
  DevicePower power = 5;
  DeviceStorage storage = 6;
  SignalChainStatus signal_chain = 7;

  // If the device supports a time sync server (see time.proto)
  // Then the UDP echo server will be available at this port
  uint32 time_sync_port = 8; // Port number (0-65535) for the UDP time sync server
}
