
syntax = "proto3";

package proto_synapse;

import "node.proto";

message SynapsePeripheral {
    NodeType peripheral_type = 1;
    uint32 peripheral_id = 2;
    NodeInfo peripheral_info = 3;
  }

message DeviceInfo {
  string name = 1;
  uint64 serial = 2;
  uint32 synapse_version = 3;
  uint32 firmware_version = 4;
  repeated SynapsePeripheral peripherals = 5;
}

